Fixed tractability flower readability; issue opentargets/platform#264

--- a/app/css/_tables.scss
+++ b/app/css/_tables.scss
@@ -500,6 +500,18 @@
                     }
                 }
             }
+
+            .popover {
+                max-width: 300px;
+            }
+
+            .tractability-flower-section {
+                overflow: hidden;
+            }
+
+            .tractability-flower-container {
+                margin: 0 -50%;
+            }
         }
     }
 
